fix: create+use global modal body height+overflow

--- a/apps/tup-ui/src/main.global.css
+++ b/apps/tup-ui/src/main.global.css
@@ -50,3 +50,9 @@ h2 {
 table {
   width: 100%;
 }
+
+/* Modals */
+.modal-body {
+  overflow-y: auto;
+  max-height: 60vh;
+}
